# craped

./: .gitignore  Makefile  Makefile.am  configure.ac  setup.sh
diffex-ui/: Makefile.am  configure.ac
diffex-ui/include/: diffex-ui.h
diffex-ui/include/diffexui/: diffex.h
diffex-ui/src/: diffex-fifo.h  diffex-ui-private.c  diffex-ui-update.c  diffex-ui.c  diffex.c  redisplay-utils.c  redisplay-utils.h
editor/: Makefile.am  configure.ac
editor/include/: editor.h  editorcmd.h
editor/src/: editor_impl.c  editor_impl.h  editorcmd-funcs.c  editorcmd-funcs.h  editorcmd.c  editorcmd.h  keybinding.c  keybinding.h
editor/test/: keybindingtest.c
gtk-ui/: Makefile.am  configure.ac
gtk-ui/include/: gtk-ui.h
gtk-ui/include/gtkui/: vte.h  vtefactory.h
gtk-ui/src/: gtk-ui.c  vte.c  vtefactory.c
include/: craped.h  diffex-ui.h  editor.h  libsys.h  sharing.h  subeditor.h  ui-core.h
include/dbg/: print_page_table.h
include/diffexui/: actual-ui.h  diffex-ui-private.h
include/libsys/: def.h  fileio.h  hashing.h  mem.h  paged_raw_data.h  quicksearch.h  raw_data.h  stream.h  strhash.h  strutil.h
include/sharing/: sharing_server.h  worldcmd.h
include/subeditor/: world_observer.h
include/tui/: xterm.h
include/uicore/: box.h  buffer_point_moves.h  framer.h  input.h  keys.h  statusline.h  terminal.h  terminalfactory.h  ui-private.h  ui.h  window-reference.h  window.h
lib/: Makefile.am  configure.ac
lib/include/: craped.h
lib/src/: craped-editor-subscriber.h  craped.c  setup.c  setup.h
libsys/: Makefile.am  configure.ac
libsys/include/libsys/: dbgdie.h  dbglog.h  fileio.h  filesystem.h  hashing.h  llfile.h  paging.h  socket.h  stream.h
libsys/src/: fileio.c  filesystem.c  hashing.c  llfile.c  paged_raw_data.c  paging.c  print_page_table.c  print_page_table.h  quicksearch.c  raw_data.c  search-paged-rawdata.c  search-rawdata.c  socket.c  stream.c
libsys/test/: datatest.c  hashtabletest.c  llfileopentest.c  llfileopentestfile.raw  raw_data_test_main.c
sharing/: Makefile.am  configure.ac
sharing/include/sharing/: buffer_server.h  worldcmd.h  worldcmd_list_lock.h
sharing/src/: worldcmd.c  worldcmd_list_lock.c
src/: main.c  setup-ui.h  setup.c  setup.h
src/diffex-ui/: diffex-fifo.c  diffex-ui-private.c  diffex-ui-update.c  diffex-ui.c
src/editor/: editor_impl.c  editor_impl.h  editorcmd-funcs.c  editorcmd-funcs.h  editorcmd.c  frontend.c  frontend.h  keybinding.c  keybinding.h
src/gtk-ui/: gtk-ui.c  vte.c
src/lib/: craped-editor-subscriber.c  craped.c  craped.h  setup-gtk-ui.c  setup-tui.c  setup.c  setup.h
src/libsys/: fileio.c  filesystem.c  hashing.c  llfile.c  mem.c  page_factory.c  page_factory.h  paging.c  print_page_table.c  raw_data.c  raw_data_private.h  search-rawdata.c  stream.c  strhash.c  strutil.c
src/sharing/: buffer_server.c  sharing_server.c  worldcmd.c  worldcmd_list_lock.c
src/subeditor/: buffer.c  buffer.h  buffer_commands.c  buffer_commands.h  mark.c  mark.h  mode.c  subeditor.c  time.h  undo.c  undo.h
src/tui/: tui.c  xterm.c
src/ui-core/: framer.c  keys.c  statusline.c  window.c  windowmanager.c
subeditor/: Makefile.am  configure.ac
subeditor/include/: subeditor.h
subeditor/include/subeditor/: def.h  mode.h
subeditor/src/: buffer.c  buffer.h  buffer_commands.c  buffer_commands.h  mark.c  subeditor-internal.h  subeditor.c
subeditor/test/: bufcmd.c  datatest.c  raw_data_search_test.c  raw_data_test.h
test/editor/: editorCmdHomeTest.c
test/libsys/: insertonebyone.c  raw_data_search_test.c  raw_data_test.h
test/subeditor/: bufcmdstktest.c  worldtest.c
test/ui-core/: split_wnd_test.c  window_test.c  windowidtest.c
tui/: Makefile.am  configure.ac
tui/include/: tui.h
tui/include/tui/: xtermfactory.h
tui/src/: tui.c  xterm.c  xtermfactory.c
ui-core/: Makefile.am  configure.ac
ui-core/include/uicore/: terminal.h  ui-private.h  ui.h  ui_observer.h  window.h  windowmanager.h
ui-core/src/: buffer_point_moves.c  framer.c  input.c  ui.c  window.c  windowmanager.c
ui-core/test/: fetch_lines.c  windowidtest.c
